SPA仕様に変更

--- a/laravel-vue-app/src/package.json
+++ b/laravel-vue-app/src/package.json
@@ -10,5 +10,10 @@
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0",
         "vue": "^3.2.47"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "vite-plugin-vuetify": "^1.0.2",
+        "vue-router": "^4.5.0"
     }
 }
