--- a/laravel-vue-app/src/package.json
+++ b/laravel-vue-app/src/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
+        "axios": "^1.7.9",
         "vite-plugin-vuetify": "^1.0.2",
         "vue-router": "^4.5.0"
     }
